# pixi_drone_camera_env

./: .gitignore  README.md  pixi.toml
log/: latest_build
src/map_publisher/map_publisher/: map_publisher.py
src/my_cpp_package/: CMakeLists.txt  package.xml
src/my_cpp_package/src/: my_node.cpp
